@@ -1,3 +1,6 @@
+**pnp-0.6.18 ??/??/2012**
+  * Bugfix:  Fixed STORAGE_TYPE and CUSTOM_TEMPLATE vars used in custom templates.
+
 **pnp-0.6.17 03/25/2012**
   * Bugfix:  Fixed rrd_convert.pl while running with --dry-run
   * Bugfix:  logging.c include missing header files ( Lars Vogdt )       
